# TxODDS-Coupon

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  .vercelignore  Anchor.toml  PRD.md  README.md  analytics.md  architecture.md  compose.app.yaml  compose.proxmox.yaml  compose.yaml  hackathon.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: release-readiness.yml  verify.yml
apps/service/: Dockerfile  package.json  tsconfig.json
apps/service/src/: app-errors.test.ts  app.integration.test.ts  app.ts  capability.ts  claim-batcher.ts  claim-burst.load.ts  cli.ts  config.test.ts  config.ts  demo-runtime.ts  fee-payer-admission.ts  maintenance.ts  onchain-config.ts  origin.ts  registration-burst.load.ts
apps/service/src/routes/: analytics.ts  demo.ts  fan.ts  public.ts  transactions.ts  types.ts
apps/service/src/workers/: demo.test.ts  demo.ts  indexer.ts  oracle.ts  settlement.ts  solana.ts  (+3 more)
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
docs/: devnet-deployment.json  implementation-verification.md  prd-traceability.md  release-blockers.json  unblock-checklist.md
docs/runbooks/: devnet-release.md  incidents.md
infra/proxmox/: cloudflared-goaldrop.service  goaldrop-api.nginx.conf
programs/goaldrop/: Cargo.toml
programs/goaldrop/src/: errors.rs  events.rs  intent.rs  lib.rs  state.rs
scripts/: dev.mjs  load-root-env.mjs  release-readiness.mjs  repository-audit.mjs
tests/: onchain.integration.test.ts
tests/fixtures/synthetic-txline/: README.md  match-sequence.json
(+36 files in other folders)
